--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,4 +60,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+    implementation 'com.google.android.gms:play-services-vision:20.1.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
