--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This may be needed when using the camera.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>The app needs to access the camera to capture images to analyze.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>The app needs to access the photo library for uploading images to analyze.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
