--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.1
+  firebase_ml_vision: ^0.9.9
   image_picker: ^0.6.7+14
   uuid: 2.2.2
 
