--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.1
+  firebase_ml_vision: ^0.9.9
+  multi_image_picker: ^4.7.14
+  flutter_absolute_path: ^1.0.6
   uuid: 2.2.2
   
 
