--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.8.0
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "dev_assets/logo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "dev_assets/logo.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
