--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,8 +60,9 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation platform('com.google.firebase:firebase-bom:26.1.0')
-    implementation 'com.google.android.gms:play-services-vision:20.1.2'
+    // implementation platform('com.google.firebase:firebase-bom:26.1.0')
+    // implementation 'com.google.android.gms:play-services-vision:19.0.2'
+    // implementation 'com.google.android.gms:play-services-vision-common:19.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
