--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.1
+  path: ^1.7.0
+  sqflite: ^1.3.0
   firebase_ml_vision: ^0.9.9
   multi_image_picker: ^4.7.14
   image_picker: ^0.6.7+14
